--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -16,6 +16,121 @@ $mysterybox: url('../img/mystery.jpg');
 $lines: #757575;
 
 //Styling
-body{
+$test: 1px solid #000;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+section{
+  width:100%;
+  height:100%;
+}
 
+//Text
+$segoe: "Segoe UI", sans-serif;
+h1{
+  font-family: $segoe;
+  font-weight: bold;
+  color:white;
+  font-size: 67px;
+}
+h2{
+  font-family: $segoe;
+  font-weight: bold;
+  font-size: 35px;
+}
+p, li{
+  font-family: $segoe;
+}
+li{
+  font-weight: bold;
+  color:white;
+  font-size:40px;
+  a{
+    color:#fff;
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+    &:hover{
+      color:$mysterborder;
+    }
+  }
+}
+
+//Container
+$container_max: 1920px;
+.container{
+  max-width: $container_max;
+  margin:auto;
+
+  //Padding
+  padding:0 250px;
+  @media(max-width: 1024px){
+    padding:0 100px;
+  }
+  @media(max-width: 768px){
+    padding:0 50px;
+  }
+  @media(max-width: 575px){
+    padding:0 25px;
+  }
+  @media(max-width: 360px){
+    padding:0 15px;
+  }
+}
+
+// --- SECTIONS --- ///
+//Section: Navigation
+.nav{
+  .container{
+    padding:0;
+    background: $default;
+    height:130px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .navigation{
+      width:100%;
+      display: flex;
+      align-items: center;
+      margin:0 25px;
+
+      .img-holder{
+        width:100px;
+        display: flex;
+
+        svg{
+
+        }
+      }
+      .title{
+        padding-left:25px;
+        img{
+
+        }
+      }
+      .links{
+        padding:0 25px;
+        ul{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          list-style-type: none;
+          li{
+            padding:0 25px;
+          }
+        }
+      }
+    }
+    .profile{
+      width:200px;
+      display: flex;
+      justify-content: space-between;
+      margin:0 25px;
+      svg{
+
+      }
+    }
+  }
 }
