--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,24 +2,24 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  line-height: 1;
 }
 
 section {
   width: 100%;
-  height: 100%;
 }
 
 h1 {
   font-family: "Segoe UI", sans-serif;
   font-weight: bold;
   color: white;
-  font-size: 67px;
+  font-size: 50px;
 }
 
 h2 {
   font-family: "Segoe UI", sans-serif;
   font-weight: bold;
-  font-size: 35px;
+  font-size: 25px;
 }
 
 p, li {
@@ -29,7 +29,7 @@ p, li {
 li {
   font-weight: bold;
   color: white;
-  font-size: 40px;
+  font-size: 30px;
 }
 li a {
   color: #fff;
@@ -40,9 +40,29 @@ li a:hover {
   color: #E6FF00;
 }
 
+.button {
+  margin: 20px 0;
+}
+.button a {
+  padding: 10px 20px;
+  background-color: #DD8600;
+  font-family: "Segoe UI", sans-serif;
+  font-weight: bold;
+  color: #fff;
+  border-radius: 30px;
+  text-decoration: none;
+  border: 2px solid #DD8600;
+  transition: all 0.2s ease-in-out;
+}
+.button a:hover {
+  background-color: #fff;
+  color: #DD8600;
+}
+
 .container {
   max-width: 1920px;
   margin: auto;
+  height: 100%;
   padding: 0 250px;
 }
 @media (max-width: 1024px) {
@@ -66,6 +86,9 @@ li a:hover {
   }
 }
 
+.nav {
+  position: fixed;
+}
 .nav .container {
   padding: 0;
   background: #F28E1C;
@@ -104,6 +127,72 @@ li a:hover {
   display: flex;
   justify-content: space-between;
   margin: 0 25px;
+}
+.hero {
+  padding-top: 130px;
+}
+.hero .background {
+  background: url("../img/hero_bg.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 420px;
+}
+.hero .background .container {
+  background: rgba(0, 0, 0, 0.42);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.hero .background .container .title {
+  padding: 15px 0;
+}
+.hero .background .container .button {
+  padding: 15px 0;
+}
+.hero .background .container .button a {
+  background-color: #F21C1C;
+  border: 2px solid #F21C1C;
+}
+.hero .background .container .button a:hover {
+  color: #F21C1C;
+  background-color: #fff;
+}
+
+.featured-left .container {
+  margin: 150px 0;
+}
+.featured-left .container .row {
+  display: flex;
+  align-items: center;
+}
+.featured-left .container .row .left .img-holder {
+  position: relative;
+}
+.featured-left .container .row .left .img-holder::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: -10px;
+  left: -10px;
+  background-color: #DD8600;
+  border-radius: 30px;
+  z-index: -1;
+}
+.featured-left .container .row .left .img-holder img {
+  width: 300px;
+  height: 300px;
+  border-radius: 30px;
+}
+.featured-left .container .row .right {
+  padding-left: 100px;
+}
+.featured-left .container .row .right .title {
+  padding-bottom: 25px;
+}
+.featured-left .container .row .right .content {
+  padding-bottom: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
