--- a/site/css/style.css
+++ b/site/css/style.css
@@ -59,15 +59,77 @@ li a:hover {
   color: #DD8600;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+}
+form b {
+  color: red;
+  width: 5px;
+  padding-top: 15px;
+}
+form .veld {
+  width: 100%;
+  display: flex;
+}
+form .veld input, form .veld textarea, form .veld select {
+  width: 100%;
+  margin: 25px 0;
+}
+form .veld select option {
+  color: black;
+}
+form .veld select option:first-child {
+  color: #767676;
+}
+form .voorwaarden {
+  display: flex;
+  align-items: center;
+}
+form .voorwaarden input {
+  margin-right: 5px;
+}
+
+input, textarea, select {
+  font-size: 25px;
+  border: none;
+  border-bottom: 1px solid #757575;
+  font-family: "Segoe UI", sans-serif;
+}
+
+input[type=submit] {
+  margin-top: 25px;
+  padding: 10px 20px;
+  background-color: #DD8600;
+  font-family: "Segoe UI", sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  color: #fff;
+  border-radius: 30px;
+  text-decoration: none;
+  border: 2px solid #DD8600;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #fff;
+  color: #DD8600;
+}
+
 .container {
   max-width: 1920px;
   margin: auto;
   height: 100%;
   padding: 0 250px;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .container {
     padding: 0 100px;
+  }
+}
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 75px;
   }
 }
 @media (max-width: 768px) {
@@ -123,11 +185,15 @@ li a:hover {
   padding: 0 25px;
 }
 .nav .container .profile {
-  width: 200px;
+  width: 100px;
   display: flex;
   justify-content: space-between;
   margin: 0 25px;
 }
+.no-hero {
+  position: static;
+}
+
 .hero {
   padding-top: 130px;
 }
@@ -159,6 +225,15 @@ li a:hover {
   background-color: #fff;
 }
 
+.footer {
+  background-color: #300808;
+  height: 280px;
+}
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .featured-left .container {
   margin: 150px 0;
 }
@@ -188,11 +263,143 @@ li a:hover {
 .featured-left .container .row .right {
   padding-left: 100px;
 }
+@media (max-width: 1024px) {
+  .featured-left .container .row .right {
+    padding-left: 50px;
+  }
+}
 .featured-left .container .row .right .title {
   padding-bottom: 25px;
 }
 .featured-left .container .row .right .content {
   padding-bottom: 25px;
+}
+
+.contact .container {
+  margin: 100px 0;
+}
+.contact .container .row {
+  display: flex;
+  justify-content: space-between;
+}
+.contact .container .row .left .title h2 {
+  font-size: 30px;
+}
+.contact .container .row .left .content .strook {
+  display: flex;
+  padding: 10px 0;
+}
+.contact .container .row .left .content .strook img {
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+}
+.contact .container .row .left .content .strook p {
+  font-size: 25px;
+}
+.contact .container .row .left .content .strook .gegevens p:nth-of-type(2) {
+  padding-top: 20px;
+}
+.contact .container .row .right {
+  width: 480px;
+}
+
+.login .container {
+  margin: 100px 0;
+}
+.login .container .row {
+  display: flex;
+  justify-content: space-between;
+}
+.login .container .row .left {
+  width: 40%;
+}
+@media (max-width: 1600px) {
+  .login .container .row .left {
+    width: 30%;
+  }
+}
+.login .container .row .left .title {
+  padding: 0 0 100px 0;
+}
+.login .container .row .left .title h1 {
+  color: black;
+}
+.login .container .row .left .registreren {
+  padding: 25px 0;
+}
+.login .container .row .right .img-holder {
+  position: relative;
+}
+.login .container .row .right .img-holder::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: -20px;
+  left: -20px;
+  background-color: #DD8600;
+  border-radius: 30px;
+  z-index: -1;
+}
+.login .container .row .right .img-holder img {
+  width: 600px;
+  height: 600px;
+  border-radius: 30px;
+}
+@media (max-width: 1600px) {
+  .login .container .row .right .img-holder img {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.register .container {
+  margin: 100px 0;
+}
+.register .container .row {
+  display: flex;
+  justify-content: space-between;
+}
+.register .container .row .left {
+  width: 40%;
+}
+@media (max-width: 1600px) {
+  .register .container .row .left {
+    width: 30%;
+  }
+}
+.register .container .row .left .title h1 {
+  color: black;
+}
+.register .container .row .left .geenachttien {
+  padding: 25px 0;
+}
+.register .container .row .right .img-holder {
+  position: relative;
+}
+.register .container .row .right .img-holder::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: -20px;
+  left: -20px;
+  background-color: #DD8600;
+  border-radius: 30px;
+  z-index: -1;
+}
+.register .container .row .right .img-holder img {
+  width: 600px;
+  height: 600px;
+  border-radius: 30px;
+  object-fit: cover;
+}
+@media (max-width: 1600px) {
+  .register .container .row .right .img-holder img {
+    width: 400px;
+    height: 400px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
