--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -75,6 +75,64 @@ li{
   }
 }
 
+//Forms
+form{
+  display: flex;
+  flex-direction: column;
+  b{
+    color: red;
+    width:5px;
+    padding-top:15px;
+  }
+  .veld {
+    width: 100%;
+    display: flex;
+    input, textarea, select {
+      width: 100%;
+      margin: 25px 0;
+    }
+    select{
+      option {
+        color:black;
+        &:first-child {
+          color: rgb(118, 118, 118);
+        }
+      }
+    }
+  }
+  .voorwaarden{
+    display: flex;
+    align-items: center;
+    input{
+      margin-right:5px;
+    }
+  }
+}
+input, textarea, select{
+  font-size:25px;
+  border:none;
+  border-bottom:1px solid $lines;
+  font-family: $segoe;
+}
+input[type=submit]{
+  margin-top:25px;
+  padding:10px 20px;
+  background-color:$beer;
+  font-family: $segoe;
+  font-weight: bold;
+  font-size:25px;
+  color:#fff;
+  border-radius:30px;
+  text-decoration: none;
+  border:2px solid $beer;
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    background-color:#fff;
+    color:$beer;
+  }
+}
+
 //Container
 $container_max: 1920px;
 .container{
@@ -84,8 +142,11 @@ $container_max: 1920px;
 
   //Padding
   padding:0 250px;
-  @media(max-width: 1024px){
+  @media(max-width: 1200px){
     padding:0 100px;
+  }
+  @media(max-width: 1024px){
+    padding:0 75px;
   }
   @media(max-width: 768px){
     padding:0 50px;
@@ -99,7 +160,6 @@ $container_max: 1920px;
 }
 
 // --- SECTIONS --- ///
-//Section: Navigation
 .nav{
   position: fixed;
 
@@ -145,7 +205,8 @@ $container_max: 1920px;
       }
     }
     .profile{
-      width:200px;
+      //width:200px;
+      width:100px;
       display: flex;
       justify-content: space-between;
       margin:0 25px;
@@ -156,6 +217,10 @@ $container_max: 1920px;
       }
     }
   }
+}
+//Nav without hero under
+.no-hero{
+  position: static;
 }
 
 .hero{
@@ -195,6 +260,23 @@ $container_max: 1920px;
   }
 }
 
+.footer{
+  background-color: $footer;
+  height:280px;
+  .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .row{
+      ul{
+        li{
+
+        }
+      }
+    }
+  }
+}
+
 .featured-left{
   .container{
     margin:150px 0;
@@ -226,12 +308,161 @@ $container_max: 1920px;
       }
       .right{
         padding-left:100px;
+        @media(max-width: 1024px){
+          padding-left:50px;
+        }
 
         .title{
           padding-bottom:25px;
         }
         .content{
           padding-bottom: 25px;
+        }
+      }
+    }
+  }
+}
+
+.contact{
+  .container{
+    margin:100px 0;
+    .row{
+      display: flex;
+      justify-content: space-between;
+
+      .left{
+        .title{
+          h2{
+            font-size:30px;
+          }
+        }
+        .content{
+          .strook{
+            display: flex;
+            padding:10px 0;
+            img{
+              width:25px;
+              height:25px;
+              margin-right:5px;
+            }
+            p{
+              font-size: 25px;
+            }
+            .gegevens{
+              p{
+                &:nth-of-type(2){
+                  padding-top:20px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .right{
+        width:480px;
+      }
+    }
+  }
+}
+
+.login{
+  .container {
+    margin: 100px 0;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+
+      .left{
+        width:40%;
+        @media(max-width: 1600px){
+          width:30%;
+        }
+        .title{
+          padding:0 0 100px 0;
+          h1{
+            color:black;
+          }
+        }
+        .registreren{
+          padding:25px 0;
+        }
+      }
+      .right{
+        .img-holder{
+          position: relative;
+          &::before{
+            position: absolute;
+            width:100%;
+            height:100%;
+            content:"";
+            top:-20px;
+            left:-20px;
+            background-color:$beer;
+            border-radius:30px;
+            z-index: -1;
+          }
+          img{
+            width:600px;
+            height:600px;
+            border-radius:30px;
+            @media(max-width: 1600px){
+              width:400px;
+              height:400px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.register{
+  .container {
+    margin: 100px 0;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+
+      .left{
+        width:40%;
+        @media(max-width: 1600px){
+          width:30%;
+        }
+        .title{
+          h1{
+            color:black;
+          }
+        }
+        .geenachttien{
+          padding:25px 0;
+        }
+      }
+      .right{
+        .img-holder{
+          position: relative;
+          &::before{
+            position: absolute;
+            width:100%;
+            height:100%;
+            content:"";
+            top:-20px;
+            left:-20px;
+            background-color:$beer;
+            border-radius:30px;
+            z-index: -1;
+          }
+          img{
+            width:600px;
+            height:600px;
+            border-radius:30px;
+            object-fit: cover;
+            @media(max-width: 1600px){
+              width:400px;
+              height:400px;
+            }
+          }
         }
       }
     }
