--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -233,6 +233,9 @@ $container_max: 1920px;
         svg {
 
         }
+        img{
+          border-radius: 50%;
+        }
       }
     }
   }
@@ -275,7 +278,25 @@ $container_max: 1920px;
           }
         }
       }
+
+      //Profile
+      .img-holder{
+        height:350px;
+        width:350px;
+        img{
+          height:100%;
+          width:100%;
+          border:5px solid #fff;
+          border-radius: 50%;
+        }
+      }
     }
+    .bg-profile-cover{
+      background: none;
+    }
+  }
+  .bg-profile{
+    background:url('../img/placeholder.png');
   }
 }
 
@@ -561,9 +582,26 @@ $container_max: 1920px;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .title{
+      h2{
+        font-size: 50px;
+        color:#fff;
+      }
+    }
   }
+  //Colors per USP
   .usp-home{
     background-color: $nonalcohol;
+  }
+  .light-beer{
+    background-color: $lightbeer;
+  }
+  .beer{
+    background-color: $beer;
+  }
+  .heavy-beer{
+    background-color: $heavybeer;
   }
 }
 
@@ -685,6 +723,119 @@ $container_max: 1920px;
               -webkit-text-stroke-color: black;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.bierlijst{
+  .container{
+    .row{
+      display: flex;
+      .block{
+        width:50%;
+        padding:50px;
+
+        .content{
+          .regel{
+            display: flex;
+            padding:5px 0;
+            p{
+              font-size: 14px;
+              &:first-child{
+                width:50%;
+                font-weight: bold;
+              }
+              &:nth-of-type(2){
+                width:40%;
+              }
+              &:last-child{
+                font-weight: bold;
+                width:10%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.profile{
+  .container{
+    .row{
+      .head{
+        display: flex;
+        align-items: center;
+        padding-top:50px;
+
+        .title{
+          padding-right:50px;
+
+          h1{
+            color:#000;
+          }
+        }
+        .username{
+          padding-right:50px;
+
+          h2{
+            color:$lines;
+            font-size: 35px;
+          }
+        }
+        .rang{
+          h3{
+            font-size: 32px;
+            padding:20px 50px;
+            border:5px solid $mysterborder;
+            background: url('../img/mystery.jpg');
+            background-position: center;
+            background-size: cover;
+            color: black;
+            -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
+            font-family: $segoe;
+            border-radius: 40px;
+          }
+        }
+      }
+      .content{
+        padding-bottom:25px;
+        .strook{
+          display: flex;
+          padding:10px 0;
+          img{
+            width:25px;
+            height:25px;
+            margin-right:5px;
+          }
+          p{
+            font-size: 25px;
+          }
+          .bier{
+            p{
+              &:nth-of-type(2){
+                padding-top:20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.content{
+  .container{
+    .row{
+      padding:50px 0;
+      .title{
+        padding:15px 0;
+        h2{
+          font-size: 40px;
         }
       }
     }
