--- a/site/css/style.css
+++ b/site/css/style.css
@@ -722,5 +722,68 @@ input[type=file] {
 .content .container .row .title h2 {
   font-size: 40px;
 }
+.content .container .info {
+  height: 70vh;
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.content .container .info .title {
+  padding: 15px 0;
+}
+.content .container .info .title h2 {
+  font-size: 40px;
+}
+.content .container .info .content {
+  padding: 25px 0;
+}
+.content .container .info .content p {
+  text-align: center;
+}
+
+.samenstellen .container {
+  margin: 150px 0;
+}
+.samenstellen .container .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.samenstellen .container .row .left {
+  width: 50%;
+  padding-right: 100px;
+}
+@media (max-width: 1024px) {
+  .samenstellen .container .row .left {
+    padding-left: 50px;
+  }
+}
+.samenstellen .container .row .left .title {
+  padding-bottom: 25px;
+}
+.samenstellen .container .row .left .content {
+  padding-bottom: 25px;
+}
+.samenstellen .container .row .right .img-holder {
+  position: relative;
+}
+.samenstellen .container .row .right .img-holder::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: -10px;
+  left: -10px;
+  background-color: #DD8600;
+  border-radius: 30px;
+  z-index: -1;
+}
+.samenstellen .container .row .right .img-holder img {
+  width: 300px;
+  height: 300px;
+  border-radius: 30px;
+}
 
 /*# sourceMappingURL=style.css.map */
