--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -839,5 +839,73 @@ $container_max: 1920px;
         }
       }
     }
+    .info{
+      height:70vh;
+      padding:50px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .title{
+        padding:15px 0;
+        h2{
+          font-size: 40px;
+        }
+      }
+      .content{
+        padding:25px 0;
+        p{
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+
+.samenstellen{
+  .container{
+    margin:150px 0;
+
+    .row{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .left{
+        width:50%;
+        padding-right:100px;
+        @media(max-width: 1024px){
+          padding-left:50px;
+        }
+
+        .title{
+          padding-bottom:25px;
+        }
+        .content{
+          padding-bottom: 25px;
+        }
+      }
+      .right{
+        .img-holder{
+          position: relative;
+          &::before{
+            position: absolute;
+            width:100%;
+            height:100%;
+            content:"";
+            top:-10px;
+            left:-10px;
+            background-color:$beer;
+            border-radius:30px;
+            z-index: -1;
+          }
+          img{
+            width:300px;
+            height:300px;
+            border-radius:30px;
+          }
+        }
+      }
+    }
   }
 }
