--- a/site/scss/main.scss
+++ b/site/scss/main.scss
@@ -181,10 +181,10 @@ $container_max: 1920px;
 .nav{
   position: fixed;
   z-index: 5;
+  background: $default;
 
   .container{
     padding:0;
-    background: $default;
     height:130px;
     display:flex;
     justify-content: space-between;
@@ -245,17 +245,22 @@ $container_max: 1920px;
   position: static;
 }
 
-.hero{
-  padding-top:130px;
+.hero {
+  padding-top: 130px;
+  height: 100%;
 
   .background {
-    background:url('../img/hero_bg.jpg');
+    background: url('../img/hero_bg.jpg');
     background-position: center;
     background-size: cover;
-    height:420px;
+    height: 420px;
+
+    .background-cover {
+      background: rgba(0, 0, 0, .42);
+      height: 100%;
+    }
 
     .container {
-      background: rgba(0, 0, 0, .42);
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -279,19 +284,22 @@ $container_max: 1920px;
         }
       }
 
+
       //Profile
-      .img-holder{
-        height:350px;
-        width:350px;
-        img{
-          height:100%;
-          width:100%;
-          border:5px solid #fff;
+      .img-holder {
+        height: 350px;
+        width: 350px;
+
+        img {
+          height: 100%;
+          width: 100%;
+          border: 5px solid #fff;
           border-radius: 50%;
         }
       }
     }
-    .bg-profile-cover{
+
+    .bg-profile-cover {
       background: none;
     }
   }
@@ -319,7 +327,7 @@ $container_max: 1920px;
 
 .featured-left{
   .container{
-    margin:150px 0;
+    margin:150px auto;
 
     .row{
       display: flex;
@@ -365,7 +373,7 @@ $container_max: 1920px;
 
 .featured-right{
   .container{
-    margin:150px 0;
+    margin:150px auto;
 
     .row{
       display: flex;
@@ -411,7 +419,7 @@ $container_max: 1920px;
 
 .contact{
   .container{
-    margin:100px 0;
+    margin:100px auto;
     .row{
       display: flex;
       justify-content: space-between;
@@ -453,7 +461,7 @@ $container_max: 1920px;
 
 .login{
   .container {
-    margin: 100px 0;
+    margin: 100px auto;
 
     .row {
       display: flex;
@@ -505,7 +513,7 @@ $container_max: 1920px;
 
 .register{
   .container {
-    margin: 100px 0;
+    margin: 100px auto;
 
     .row {
       display: flex;
@@ -607,7 +615,7 @@ $container_max: 1920px;
 
 .pakketten{
   .container{
-    margin:100px 0;
+    margin:100px auto;
     .row{
       .title{
         padding:25px 0;
@@ -649,7 +657,7 @@ $container_max: 1920px;
 
 .abonneren{
   .container{
-    margin:100px 0;
+    margin:100px auto;
     .row{
       .title{
         padding:25px 0;
@@ -666,6 +674,7 @@ $container_max: 1920px;
       display: flex;
       flex-wrap: wrap;
       .block{
+        display: block;
         padding:2px;
         width:50%;
         height:350px;
@@ -864,7 +873,7 @@ $container_max: 1920px;
 
 .samenstellen{
   .container{
-    margin:150px 0;
+    margin:150px auto;
 
     .row{
       display: flex;
